harness-delegate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harness-delegate

---

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    harness.io/app: harness-delegate
    harness.io/account: vkbmdf
    harness.io/name: harness-test
  name: harness-test-vkbmdf
  namespace: harness-delegate
spec:
  replicas: 1
  selector:
    matchLabels:
      harness.io/app: harness-delegate
      harness.io/account: vkbmdf
      harness.io/name: harness-test
  serviceName: ""
  template:
    metadata:
      labels:
        harness.io/app: harness-delegate
        harness.io/account: vkbmdf
        harness.io/name: harness-test
    spec:
      containers:
      - image: harness/delegate:latest
        imagePullPolicy: Always
        name: harness-delegate-instance
        resources:
          limits:
            cpu: "1"
            memory: "8Gi"
      restartPolicy: Always
