test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: ontour-dev
spec:
  selector:
    app: hello-world
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
status:
  loadBalancer: {}
