weavetest_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weavetest
  namespace: ontour-dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: weavetest.tourslabs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world
          servicePort: 80
